--- a/css/styles.css
+++ b/css/styles.css
@@ -1102,8 +1102,8 @@ pre code {
   }
 
   .col-md-4 {
-    flex: 0 0 33.3333333333%;
-    max-width: 33.3333333333%;
+    flex: 0 0 50.0%;
+    max-width: 50.0%;
   }
 
   .col-md-5 {
